--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,4 @@
 @import './componentes/h1.scss';
 @import './componentes/h2.scss';
 @import './componentes/horarios.scss';
+@import './componentes/p.scss';
