--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import './base/maps';
 @import './base/mixin';
 @import './componentes/h1.scss';
+@import './componentes/form.scss';
 @import './componentes/h2.scss';
 @import './componentes/horarios.scss';
 @import './componentes/p.scss';
